--- a/testing.sagebrush.MT/Stepwat Inputs/Input/rgroup.in
+++ b/testing.sagebrush.MT/Stepwat Inputs/Input/rgroup.in
@@ -49,17 +49,25 @@
 #         into ephemeral (this year's) biomass by
 #         grams_extra_biomass = mm_extra_ppt * xgrow_factor
 # veg_prod_type = 1 for tree, 2 for shrub, & 3 for grass.  Refer to soilwat's VegProd types in VegProd.h.
+#
+#TM - density values from Biondini et al 1998 - used density% in Table 2 for p.cool.forb (Achillea millefolium) and
+#	p.warm.forb (Grindelia squarrosa)
+#
+#TM - density values for annual cool grasses from (http://www.fs.fed.us/database/feis/plants/graminoid/brojap/all.html) converted 56 stems/sqft to stems/sqmeter
+#
+#TM - density for perennial warm grasses from (http://www.fs.fed.us/database/feis/plants/graminoid/koemac/all.html#4) 
+#  used 1052 KOMA per 2 rod squar and converted to 11 per meter square
 
 # name            space   density maxest slow    stretch xres  estann  on  startyr killyr  killfrq  extirp  mort  xgrow  veg_prod_type  
  sagebrush       0.5100  1.0000      1  0.0500       2     0       0   1      1       0        0       0     0  0.00000   2
- a.cool.forb     0.0700  0.3300      4  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
- a.warm.forb     0.0700  0.3300      4  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
- p.cool.forb     0.0700  0.3300      4  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
- p.warm.forb     0.0700  0.3300      4  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
- a.cool.grass    0.2800  1.5600      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
- a.warm.grass    0.2800  1.5600      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
- p.cool.grass    0.2800  1.5600      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
- p.warm.grass    0.2800  1.5600      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
+ a.cool.forb     0.0700  0.3300*      4  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
+ a.warm.forb     0.0700  0.3300*      4  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
+ p.cool.forb     0.0700  18.000      4  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
+ p.warm.forb     0.0700  5.0000      4  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
+ a.cool.grass    0.2800  602.00      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
+ a.warm.grass    0.2800  1.5600*      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
+ p.cool.grass    0.2800  1.5600*      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
+ p.warm.grass    0.2800  11.000      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   2
  shrub    	 0.0700  1.6700      3  0.0500       2     1       1   1      1       0        0       0     0  0.00000   2
  
 
@@ -77,7 +85,7 @@
 # dryint   = intercept of res.avail. in dry years
 
 # name            nslope   nint     wetslope wetint   dryslope dryint  
-sagebrush 	  	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
+sagebrush 	  0.00093  0.70935  0.00093  0.70935  0.00093  0.70935
 a.cool.forb 	  0.00093  0.70935  0.00400  -0.5800  0.00400  0.08000
 a.warm.forb 	  0.00093  0.70935  0.00400  -0.5800  0.00400  0.08000
 p.cool.forb 	  0.00093  0.70935  0.00400  -0.5800  0.00400  0.08000
@@ -106,7 +114,7 @@ shrub    	  0.00093  0.70935  0.00093  0.70935  0.00400  0.08000
 # or mortality in wet years for that resource group.
 
 # name            gslope  gint  mslope  gint 
-shrubs		0.0	0.0	0.0	0.0
+shrub		0.0	0.0	0.0	0.0
 
 [end]  # section end
 
