--- a/testing.sagebrush.MT/Stepwat Inputs/Input/species.in
+++ b/testing.sagebrush.MT/Stepwat Inputs/Input/species.in
@@ -62,28 +62,32 @@
 #
 #TM - minbio & vegindv(used values from Bradford and Lauenroth 2006, Table A1.4)
 #
+#TM - set all vegindv to 3 (number used acroos the board in Bradford and Lauenroth 2006)
 #
+#TM - set cosurv to 0.01 for perennials and 0.00 for annuals (arbitrary best guesses to start with)
+#
+#TM - NEED:age for species, maxbio for species
 #
 # name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff
- artr       1    0  0.47000 0.900    2       3    0.12500    1   2.000  856.52      n       0       1  0.0100     1
- trdu       2    1  0.94700 0.900    2       3    0.17000    3   0.035   3.055      n       0       1  0.0100     1
- cryp       2    1  0.94700 0.900    2       3    0.12000    9   0.035   1.399      n       0       2  0.0100     1
- amre       3    1  0.94700 0.900    2       3    0.19000    10  0.035   3.055      n       0       2  0.0100     1
- chen       3    1  0.94700 0.900    2       3    0.01000    22  0.035   3.055      n       0       1  0.0100     1
+ artr       1    0  0.47000 0.900    2       3    0.12500    1   2.000  856.52      n       0       2  0.0100     1
+ trdu       2    1  0.94700 0.900    2       3    0.17000    3   0.035   3.055      n       0       2  0.0000     1
+ cryp       2    1  0.94700 0.900    2       3    0.12000    9   0.035   1.399      n       0       2  0.0000     1
+ amre       3    1  0.94700 0.900    2       3    0.19000    10  0.035   3.055      n       0       2  0.0000     1
+ chen       3    1  0.94700 0.900    2       3    0.01000    22  0.035   3.055      n       0       2  0.0000     1
  acmi       4    5  0.42600 0.900    2       3    0.01500    6   0.035   0.707      y       3       2  0.0100     1
- phho       4   15  0.42600 0.900    2       3    0.00100    6   0.035   0.707      y       3       1  0.0100     1
- arfr       5   15  0.42600 0.900    2       3    0.06000    2   0.035   0.429      y       3       1  0.0100     1
+ phho       4   15  0.42600 0.900    2       3    0.00100    6   0.035   0.707      n       0       2  0.0100     1
+ arfr       5   15  0.42600 0.900    2       3    0.06000    2   0.035   0.429      y       3       2  0.0100     1
  grsq       5   15  0.42600 0.900    2       3    0.01100    4   0.035   0.429      n       0       2  0.0100     1
- brar       6    1  0.94700 0.900    2       3    0.00200    2080  0.020   19.726   n       0       2  0.0100     1
- vuoc       6    1  0.94700 0.900    2       3    0.00100    1090  0.020   2.126    n       0       2  0.0100     1
- spp1       7    1  0.94700 0.900    2       3    0.00200    2   0.020   19.726     n       0       2  0.0100     0
- spp2       7    1  0.94700 0.900    2       3    0.00100    2   0.020   2.126      n       0       2  0.0100     0
- pose       8   15  0.47400 0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0000     1
- koma       8   15  0.47400 0.900    2       3    0.17000    2   0.500   0.429      y       3       1  0.0000     1
- bogr       9    0  0.47400 0.900    2       3    0.17000    25  0.605   0.429      y       3       2  0.0000     1
- spcr       9   15  0.47400 0.900    2       3    0.02000    3   0.605   15.000     y       3       1  0.0100     1
- gusa       10  20  0.40000 0.900    2       3    0.17000    2   2.000   0.429      y       3       2  0.0000     1
- chvi       10  20  0.40000 0.900    2       3    0.02000    2   2.000   15.000     y       3       1  0.0100     1
+ brar       6    1  0.94700 0.900    2       3    0.00200    2080  0.020   19.726   n       0       2  0.0000     1
+ vuoc       6    1  0.94700 0.900    2       3    0.00100    1090  0.020   2.126    n       0       2  0.0000     1
+ spp1       7    1  0.94700 0.900    2       3    0.00200    2   0.020   19.726     n       0       2  0.0000     0
+ spp2       7    1  0.94700 0.900    2       3    0.00100    2   0.020   2.126      n       0       2  0.0000     0
+ pose       8   15  0.47400 0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0100     1
+ koma       8   15  0.47400 0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0100     1
+ bogr       9    0  0.47400 0.900    2       3    0.17000    25  0.605   0.429      y       3       1  0.0100     1
+ spcr       9   15  0.47400 0.900    2       3    0.02000    3   0.605   15.000     n       0       1  0.0100     1
+ gusa       10  20  0.40000 0.900    2       3    0.17000    2   2.000   0.429      n       0       2  0.0100     1
+ chvi       10  20  0.40000 0.900    2       3    0.02000    2   2.000   15.000     n       0       2  0.0100     1
 
 [end]  # this marks the end of the species-specific parameters above
 
