--- a/testing.sagebrush.MT/Stepwat Inputs/Input/rgroup.in
+++ b/testing.sagebrush.MT/Stepwat Inputs/Input/rgroup.in
@@ -58,19 +58,21 @@
 #TM - density for perennial warm grasses from (http://www.fs.fed.us/database/feis/plants/graminoid/koemac/all.html#4) 
 #  used 1052 KOMA per 2 rod squar and converted to 11 per meter square
 #
-#TM - need space, density for starred groups, 
+#TM - densities from GZTX data for shrub (gusa) & a.warm.forb(chal - used same for a.cool.forb) & p.cool.grass (stco)
+#
+#TM - need density for a.warm.grass - but right now turned off so insterted arbitraty number
 
 # name            space   density maxest slow    stretch xres  estann  on  startyr killyr  killfrq  extirp  mort  xgrow  veg_prod_type  
  sagebrush       0.5100  1.0000      1  0.0500       2     0       0   1      1       0        0       0     0  0.00000   2
- a.cool.forb     0.0700  0.3300*      4  0.0500       2     1       1   1      1       0        0       0     1  0.00000   4
- a.warm.forb     0.0700  0.3300*      4  0.0500       2     1       1   1      1       0        0       0     1  0.00000   4
+ a.cool.forb     0.0700  20.000      4  0.0500       2     1       1   1      1       0        0       0     1  0.00000   4
+ a.warm.forb     0.0700  20.000      4  0.0500       2     1       1   1      1       0        0       0     1  0.00000   4
  p.cool.forb     0.0700  18.000      4  0.0500       2     1       0   1      1       0        0       0     1  0.00000   4
  p.warm.forb     0.0700  5.0000      4  0.0500       2     1       0   1      1       0        0       0     1  0.00000   4
  a.cool.grass    0.2800  602.00      6  0.0500       2     1       1   1      1       0        0       0     1  0.00000   3
- a.warm.grass    0.2800  1.5600*      6  0.0500       2     1       1   1      1       0        0       0     1  0.00000   3
- p.cool.grass    0.2800  1.5600*      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   3
+ a.warm.grass    0.2800  5.0000      6  0.0500       2     1       1   1      1       0        0       0     1  0.00000   3
+ p.cool.grass    0.2800  17.000      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   3
  p.warm.grass    0.2800  11.000      6  0.0500       2     1       0   1      1       0        0       0     1  0.00000   3
- shrub    	 0.0700  1.6700*      3  0.0500       2     1       0   1      1       0        0       0     0  0.00000   2
+ shrub    	 0.0700  2.7000      3  0.0500       2     1       0   1      1       0        0       0     0  0.00000   2
 
 
 [end]  # section end
