--- a/testing.sagebrush.MT/Stepwat Inputs/Input/species.in
+++ b/testing.sagebrush.MT/Stepwat Inputs/Input/species.in
@@ -66,28 +66,38 @@
 #
 #TM - set cosurv to 0.01 for perennials and 0.00 for annuals (arbitrary best guesses to start with)
 #
+#TM - 4.18.15 - changes grsp to lipu because of the disputed life history of grsq (annual, biennial, or short lived perennial)
+#
+#TM - lipu, gusa, spcr max life span from Lauenroth and Adler 2008 - not sure I believe GUSA though...
+#
+#TM - chvi lifespan from targhee national forest ecological inventory - ebook google books
+#
+#TM - koma is a short lived perennial (guess max age 5yrs); pose long-lived perennial (age similar to BOGR?)
+#
+#TM - acmi (10), phho (10), arfr (10) best guesses
+#
 #TM - NEED:age for species, maxbio for species
 #
 # name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff
- artr       1    0  0.47000 0.900    2       3    0.12500    1   2.000  856.52      n       0       2  0.0100     1
+ artr       1   75  0.47000 0.900    2       3    0.12500    1   2.000  856.52      n       0       2  0.0100     1
  trdu       2    1  0.94700 0.900    2       3    0.17000    3   0.035   3.055      n       0       2  0.0000     1
  cryp       2    1  0.94700 0.900    2       3    0.12000    9   0.035   1.399      n       0       2  0.0000     1
  amre       3    1  0.94700 0.900    2       3    0.19000    10  0.035   3.055      n       0       2  0.0000     1
  chen       3    1  0.94700 0.900    2       3    0.01000    22  0.035   3.055      n       0       2  0.0000     1
- acmi       4    5  0.42600 0.900    2       3    0.01500    6   0.035   0.707      y       3       2  0.0100     1
- phho       4   15  0.42600 0.900    2       3    0.00100    6   0.035   0.707      n       0       2  0.0100     1
- arfr       5   15  0.42600 0.900    2       3    0.06000    2   0.035   0.429      y       3       2  0.0100     1
- grsq       5   15  0.42600 0.900    2       3    0.01100    4   0.035   0.429      n       0       2  0.0100     1
+ acmi       4   10  0.42600 0.900    2       3    0.01500    6   0.035   0.707      y       3       2  0.0100     1
+ phho       4   10  0.42600 0.900    2       3    0.00100    6   0.035   0.707      y       3       2  0.0100     1
+ arfr       5   10  0.42600 0.900    2       3    0.06000    2   0.035   0.429      y       3       2  0.0100     1
+ lipu       5   12  0.42600 0.900    2       3    0.01100    4   0.035   0.429      n       0       2  0.0100     1
  brar       6    1  0.94700 0.900    2       3    0.00200    2080  0.020   19.726   n       0       2  0.0000     1
  vuoc       6    1  0.94700 0.900    2       3    0.00100    1090  0.020   2.126    n       0       2  0.0000     1
  spp1       7    1  0.94700 0.900    2       3    0.00200    2   0.020   19.726     n       0       2  0.0000     0
  spp2       7    1  0.94700 0.900    2       3    0.00100    2   0.020   2.126      n       0       2  0.0000     0
- pose       8   15  0.47400 0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0100     1
- koma       8   15  0.47400 0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0100     1
- bogr       9    0  0.47400 0.900    2       3    0.17000    25  0.605   0.429      y       3       1  0.0100     1
- spcr       9   15  0.47400 0.900    2       3    0.02000    3   0.605   15.000     n       0       1  0.0100     1
- gusa       10  20  0.40000 0.900    2       3    0.17000    2   2.000   0.429      n       0       2  0.0100     1
- chvi       10  20  0.40000 0.900    2       3    0.02000    2   2.000   15.000     n       0       2  0.0100     1
+ pose       8   35  0.47400 0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0100     1
+ koma       8    5  0.47400 0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0100     1
+ bogr       9   35  0.47400 0.900    2       3    0.17000    25  0.605   0.429      y       3       1  0.0100     1
+ spcr       9   29  0.47400 0.900    2       3    0.02000    3   0.605   15.000     n       0       1  0.0100     1
+ gusa       10   7  0.40000 0.900    2       3    0.17000    2   2.000   0.429      n       0       2  0.0100     1
+ chvi       10  13  0.40000 0.900    2       3    0.02000    2   2.000   15.000     n       0       2  0.0100     1
 
 [end]  # this marks the end of the species-specific parameters above
 
@@ -132,7 +142,7 @@
  acmi     0.7500 0.9000 0.9000 0.9000
  phho     0.7500 0.9000 0.9000 0.9000
  arfr     0.7500 0.9000 0.9000 0.9000
- grsq     0.7500 0.9000 0.9000 0.9000
+ lipu     0.7500 0.9000 0.9000 0.9000
  brar     0.7500 0.9000 0.9000 0.9000
  vuoc     0.7500 0.9000 0.9000 0.9000
  spp1     0.7500 0.9000 0.9000 0.9000
@@ -170,7 +180,7 @@
  acmi 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  phho 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  arfr 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- grsq 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ lipu 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  brar 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  vuoc 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  spp1 	1		0.5	105	520	0.01	0.55	30.0	100.0 
