--- a/testing.sagebrush.MT/Stepwat Inputs/Input/rgroup.in
+++ b/testing.sagebrush.MT/Stepwat Inputs/Input/rgroup.in
@@ -52,27 +52,25 @@
 #
 #TM - density values from Biondini et al 1998 - used density% in Table 2 for p.cool.forb (Achillea millefolium) and
 #	p.warm.forb (Grindelia squarrosa)
-#
 #TM - density values for annual cool grasses from (http://www.fs.fed.us/database/feis/plants/graminoid/brojap/all.html) converted 56 stems/sqft to stems/sqmeter
-#
 #TM - density for perennial warm grasses from (http://www.fs.fed.us/database/feis/plants/graminoid/koemac/all.html#4) 
 #  used 1052 KOMA per 2 rod squar and converted to 11 per meter square
-#
 #TM - densities from GZTX data for shrub (gusa) & a.warm.forb(chal - used same for a.cool.forb) & p.cool.grass (stco)
-#
 #TM - need density for a.warm.grass - but right now turned off so insterted arbitraty number
+# space parameter for sagebrush, p.cool.grass, p.warm.grass, a.cool.grass, a.warm.grass, forbs from Bradford & Lauenroth 2006
+# space parameter for shrubs was a guess (KP) 
 
 # name            space   density maxest slow    stretch xres  estann  on  startyr killyr  killfrq  extirp  mort  xgrow  veg_prod_type  
- sagebrush       0.5100  1.0000      1  0.0500       2     0       0   1      1       0        0       0     0  0.00000   2
- a.cool.forb     0.0700  20.000      2  0.0500       2     1       1   1      1       0        0       0     1  0.00000   4
- a.warm.forb     0.0700  20.000      2  0.0500       2     1       1   1      1       0        0       0     1  0.00000   4
- p.cool.forb     0.0700  18.000      2  0.0500       2     1       0   1      1       0        0       0     1  0.00000   4
- p.warm.forb     0.0700  5.0000      2  0.0500       2     1       0   1      1       0        0       0     1  0.00000   4
- a.cool.grass    0.2800  602.00      2  0.0500       2     1       1   1      1       0        0       0     1  0.00000   3
- a.warm.grass    0.2800  5.0000      2  0.0500       2     1       1   1      1       0        0       0     1  0.00000   3
- p.cool.grass    0.2800  17.000      2  0.0500       2     1       0   1      1       0        0       0     1  0.00000   3
- p.warm.grass    0.2800  11.000      2  0.0500       2     1       0   1      1       0        0       0     1  0.00000   3
- shrub    	 0.0700  2.7000      2  0.0500       2     1       0   1      1       0        0       0     0  0.00000   2
+ sagebrush       0.350  1.0000      1  0.0500       2     0       0   1      1       0        0       0     0  0.00000   2
+ a.cool.forb     0.050  20.000      2  0.0500       2     1       1   1      1       0        0       0     1  0.00000   4
+ a.warm.forb     0.025  20.000      2  0.0500       2     1       1   1      1       0        0       0     1  0.00000   4
+ p.cool.forb     0.050  18.000      2  0.0500       2     1       0   1      1       0        0       0     1  0.00000   4
+ p.warm.forb     0.025  5.0000      2  0.0500       2     1       0   1      1       0        0       0     1  0.00000   4
+ a.cool.grass    0.100  602.00      2  0.0500       2     1       1   1      1       0        0       0     1  0.00000   3
+ a.warm.grass    0.050  5.0000      2  0.0500       2     1       1   1      1       0        0       0     1  0.00000   3
+ p.cool.grass    0.400  17.000      2  0.0500       2     1       0   1      1       0        0       0     1  0.00000   3
+ p.warm.grass    0.025  11.000      2  0.0500       2     1       0   1      1       0        0       0     1  0.00000   3
+ shrub    	     0.100  2.7000      2  0.0500       2     1       0   1      1       0        0       0     0  0.00000   2
 
 
 [end]  # section end
