--- a/testing.sagebrush.MT/Stepwat Inputs/Input/species.in
+++ b/testing.sagebrush.MT/Stepwat Inputs/Input/species.in
@@ -77,7 +77,8 @@
 #TM - acmi (10), phho (10), arfr (10) best guesses
 #
 #TM - NEED:age for species, maxbio for species
-#
+# pestab for bogr, vuoc, chna from testing folder for shortgrass steppe 
+
 # name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff
  artr       1   75  0.470   0.900    2       3    0.12500    1   2.000  856.52      n       0       2  0.0100     1
  trdu       2    1  0.426   0.900    2       3    0.17000    3   0.035   3.055      n       0       2  0.0000     1
@@ -89,15 +90,15 @@
  arfr       5   10  0.426   0.900    2       3    0.06000    2   0.035   0.429      y       3       2  0.0100     1
  lipu       5   12  0.426   0.900    2       3    0.01100    4   0.035   0.429      n       0       2  0.0100     1
  brar       6    1  0.947   0.900    2       3    0.00200    2080  0.020   19.726   n       0       2  0.0000     0
- vuoc       6    1  0.947   0.900    2       3    0.00100    1090  0.020   2.126    n       0       2  0.0000     0
+ vuoc       6    1  0.947   0.900    2       3    0.17000    1090  0.020   2.126    n       0       2  0.0000     0
  spp1       7    1  0.947   0.900    2       3    0.00200    2   0.020   19.726     n       0       2  0.0000     0
  spp2       7    1  0.947   0.900    2       3    0.00100    2   0.020   2.126      n       0       2  0.0000     0
  pose       8   35  0.474   0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0100     1
  koma       8    5  0.474   0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0100     1
- bogr       9   35  0.474   0.900    2       3    0.17000    25  0.605   0.429      y       3       1  0.0100     1
- spcr       9   29  0.47400 0.900    2       3    0.02000    3   0.605   15.000     n       0       1  0.0100     1
- gusa       10   7  0.40000 0.900    2       3    0.17000    2   2.000   0.429      n       0       2  0.0100     1
- chvi       10  13  0.40000 0.900    2       3    0.02000    2   2.000   15.000     n       0       2  0.0100     1
+ bogr       9   35  0.474   0.900    2       3    0.12500    25  0.605   0.429      y       3       1  0.0100     1
+ spcr       9   29  0.474   0.900    2       3    0.02000    3   0.605   15.000     n       0       1  0.0100     1
+ gusa       10   7  0.400   0.900    2       3    0.17000    2   2.000   0.429      n       0       2  0.0100     1
+ chvi       10  13  0.400   0.900    2       3    0.02000    2   2.000   15.000     n       0       2  0.0100     1
 
 [end]  # this marks the end of the species-specific parameters above
 
