--- a/testing.sagebrush.MT/Stepwat Inputs/Input/species.in
+++ b/testing.sagebrush.MT/Stepwat Inputs/Input/species.in
@@ -74,30 +74,38 @@
 #
 #TM - koma is a short lived perennial (guess max age 5yrs); pose long-lived perennial (age similar to BOGR?)
 #
-#TM - acmi (10), phho (10), arfr (10) best guesses
+#TM - age - acmi (10), phho (10), arfr (10) best guesses
 #
-#TM - NEED:age for species, maxbio for species
+#TM - NEED: maxbio for species, pestab, ratep, 
+#
+#TM - used SGSLTER parameters for BOGR, CHVI(chna), gusa, vuoc, chen(chal)
+#
+#TM - acmi biomass Higgins and Mack 1987, spcr biomass luecro et al 2008, trdu biomass Reichman and Smith 1991 figure 2
+#
+#TM - best guesses phho, brar, pose, koma
+#
+#TM - arfr and lipu from LTER ANPP mean value for all years in 0.25m2 plot
 #
 # name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff
  artr       1   75  0.47000 0.900    2       3    0.12500    1   2.000  856.52      n       0       2  0.0100     1
- trdu       2    1  0.94700 0.900    2       3    0.17000    3   0.035   3.055      n       0       2  0.0000     1
+ trdu       2    1  0.94700 0.900    2       3    0.17000    3   0.035   3.700      n       0       2  0.0000     1
  cryp       2    1  0.94700 0.900    2       3    0.12000    9   0.035   1.399      n       0       2  0.0000     1
  amre       3    1  0.94700 0.900    2       3    0.19000    10  0.035   3.055      n       0       2  0.0000     1
- chen       3    1  0.94700 0.900    2       3    0.01000    22  0.035   3.055      n       0       2  0.0000     1
+ chen       3    1  0.94700 0.900    2       2    0.17000    22  0.022   0.429      n       0       1  0.0000     1
  acmi       4   10  0.42600 0.900    2       3    0.01500    6   0.035   0.707      y       3       2  0.0100     1
- phho       4   10  0.42600 0.900    2       3    0.00100    6   0.035   0.707      y       3       2  0.0100     1
- arfr       5   10  0.42600 0.900    2       3    0.06000    2   0.035   0.429      y       3       2  0.0100     1
- lipu       5   12  0.42600 0.900    2       3    0.01100    4   0.035   0.429      n       0       2  0.0100     1
- brar       6    1  0.94700 0.900    2       3    0.00200    2080  0.020   19.726   n       0       2  0.0000     1
- vuoc       6    1  0.94700 0.900    2       3    0.00100    1090  0.020   2.126    n       0       2  0.0000     1
- spp1       7    1  0.94700 0.900    2       3    0.00200    2   0.020   19.726     n       0       2  0.0000     0
+ phho       4   10  0.42600 0.900    2       3    0.00100    6   0.035   5.000      y       3       2  0.0100     1
+ arfr       5   10  0.42600 0.900    2       3    0.06000    2   0.035   7.480      y       3       2  0.0100     1
+ lipu       5   12  0.42600 0.900    2       3    0.01100    4   0.035   1.390      n       0       2  0.0100     1
+ brar       6    1  0.94700 0.900    2       3    0.00200    20  0.020   0.500	    n       0       2  0.0000     0
+ vuoc       6    1  0.94700 0.900    2       1    0.17000    16  0.022   0.429      n       0       2  0.0000     0
+ spp1       7    1  0.94700 0.900    2       3    0.00200    2   0.020   0.429     n       0       2  0.0000     0
  spp2       7    1  0.94700 0.900    2       3    0.00100    2   0.020   2.126      n       0       2  0.0000     0
- pose       8   35  0.47400 0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0100     1
- koma       8    5  0.47400 0.900    2       3    0.17000    2   0.500   0.429      y       3       2  0.0100     1
- bogr       9   35  0.47400 0.900    2       3    0.17000    25  0.605   0.429      y       3       1  0.0100     1
- spcr       9   29  0.47400 0.900    2       3    0.02000    3   0.605   15.000     n       0       1  0.0100     1
- gusa       10   7  0.40000 0.900    2       3    0.17000    2   2.000   0.429      n       0       2  0.0100     1
- chvi       10  13  0.40000 0.900    2       3    0.02000    2   2.000   15.000     n       0       2  0.0100     1
+ pose       8   35  0.47400 0.900    2       3    0.17000    2   0.500   1.500      y       3       2  0.0100     1
+ koma       8    5  0.47400 0.900    2       3    0.17000    2   0.500   1.000      y       3       2  0.0100     1
+ bogr       9    0  0.47400 1.000    2       2    0.12500    2   0.605   12.096      y       3       1  0.0100     1
+ spcr       9   29  0.47400 0.900    2       3    0.02000    3   0.605   7.0000     n       0       1  0.0100     1
+ gusa       10  10  0.73700 0.900    2       3    0.00100    5   0.106   12.126      n       0       2  0.0100     1
+ chvi       10  35  0.47400 0.900    2 	     2 	  0.00200    2   0.986   19.726     n       0       2  0.0100     1
 
 [end]  # this marks the end of the species-specific parameters above
 
