--- a/testing.sagebrush.MT/Stepwat Inputs/Input/species.in
+++ b/testing.sagebrush.MT/Stepwat Inputs/Input/species.in
@@ -94,9 +94,9 @@
 # name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff
 
  artr       1   150 0.47400 0.900    2       3    1.00000    1   2.000  825.00      n       0       2  0.0100     1
- trdu       2    1  0.94700 0.900    2       3    0. 1500    5   0.035   0.700      n       0       2  0.0000     0
- cryp       2    1  0.94700 0.900    2       3    0. 1500    5   0.035   0.700      n       0       2  0.0000     1
- amre       3    1  0.94700 0.900    2       3    0. 1500    5   0.035   0.700      n       0       2  0.0000     0
+ trdu       2    1  0.94700 0.900    2       3    0.01500    5   0.035   0.700      n       0       2  0.0000     0
+ cryp       2    1  0.94700 0.900    2       3    0.01500    5   0.035   0.700      n       0       2  0.0000     1
+ amre       3    1  0.94700 0.900    2       3    0.01500    5   0.035   0.700      n       0       2  0.0000     0
  chen       3    1  0.94700 0.900    2       2    0.01500    5   0.022   0.429      n       0       1  0.0000     1
  acmi       4   10  0.42600 0.900    2       3    0.15000    6   0.035   0.707      y       3       2  0.0100     0
  phho       4   10  0.42600 0.900    2       3    0.15000    6   0.035   5.000      y       3       2  0.0100     1
@@ -110,8 +110,8 @@
  koma       8    5  0.47400 0.900    2       3    0.2500     2   0.500    6.000     y       3       2  0.0100     0
  bogr       9    0  0.47400 0.900    2       2    0.12500    2   0.605   12.096     y       3       1  0.0100     1
  spcr       9   29  0.47400 0.900    2       3    0.2500     3   0.605    6.000     n       0       1  0.0100     0
- gusa       10  10  0.73700 0.900    2       3    0.1000     2   0.106   12.126      n       0       2  0.0100     1
- chvi       10  35  0.47400 0.900    2 	     2 	  0.1000     2   0.986   19.726      n       0       2  0.0100     0
+ gusa       10  10  0.73700 0.900    2       3    0.1000     2   0.106   12.126     n       0       2  0.0100     1
+ chvi       10  35  0.47400 0.900    2 	     2 	  0.1000     2   0.986   19.726     n       0       2  0.0100     0
 
 
 [end]  # this marks the end of the species-specific parameters above
