Added new functions for generating grid cells avg value output file

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-#eclipse project files
+# Eclipse project files
 ###################
-.cproject
 .project
 .settings/
+
+# CDT-specific
+###################
+.cproject
 
 # Compiled source #
 ###################
