--- a/testing.sagebrush.MT_drs/files.in
+++ b/testing.sagebrush.MT_drs/files.in
@@ -15,3 +15,4 @@ files.in				# name of stepwat files.in file
 Output/g_bmassavg			# name of the prefix given to the biomass output files
 Output/g_mortavg			# name of the prefix given to the mortuary output files
 Output/g_receivedprob			# name of the prefix given to the seed disperal received probability output files
+Output/g_bmass_cell_avg			# name of the prefix given to the biomass grid cell avg output files
