--- a/testing.sagebrush.MT_drs/Stepwat Inputs/Input/rgroup.in
+++ b/testing.sagebrush.MT_drs/Stepwat Inputs/Input/rgroup.in
@@ -59,10 +59,11 @@
 #TM - need density for a.warm.grass - but right now turned off so insterted arbitraty number
 # space parameter for sagebrush, p.cool.grass, p.warm.grass, a.cool.grass, a.warm.grass, forbs from Bradford & Lauenroth 2006
 # space parameter for shrubs was a guess (KP) 
-
+#
+#TM 10.6.2015 - tested various stretch values for sagebrush and found stretch of 8 to be best paired with irate 0.02
 # name            space   density maxest slow    stretch xres  estann  on  startyr killyr  killfrq  extirp  mort  xgrow  veg_prod_type  
 
- sagebrush       0.325  1.0000      1  0.0500       1     1       0   1      1       0        0       0     0  0.00000   2
+ sagebrush       0.325  1.0000      1  0.0500       8     1       0   1      1       0        0       0     0  0.00000   2
  a.cool.forb     0.030  5.0000      1  0.0500       2     1       0   1      1       0        0       0     1  0.00000   4
  a.warm.forb     0.020  5.0000      1  0.0500       2     1       0   1      1       0        0       0     1  0.00000   4
  p.cool.forb     0.100  5.0000      1  0.0500       2     1       0   1      1       0        0       0     1  0.00000   4
