--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/sxw/sxwroots2.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/sxw/sxwroots2.in
@@ -1,11 +1,11 @@
-#GrpName       %L1   %L2    %L3    %L4    %L5		%L6 %L7	%L8 %L9
-sagebrush      	.05	   .20	 .25	.25	   .15	   .10
-a.cool.forb		.15    .30	 .35	.20	   .00	   .00
-a.warm.forb		.15    .30	 .35	.20	   .00	   .00
-p.cool.forb		.05    .20	 .40	.30	   .05	   .00
-p.warm.forb		.15    .30	 .35	.20	   .00	   .00
-a.cool.grass    .35    .275  .15    .125   .10	   .00
-a.warm.grass    .30    .40   .20    .10	   .00	   .00
+#GrpName       %L1   %L2    %L3    %L4    %L5		%L6
+sagebrush      	.05	   .20	 .25	.25	   .35	   .05
+a.cool.forb		.40    .30	 .20	.10	   .00	   .00
+a.warm.forb		.40    .25	 .25	.10	   .00	   .00
+p.cool.forb		.15    .20	 .40	.20	   .05	   .00
+p.warm.forb		.15    .20	 .35	.25	   .05	   .00
+a.cool.grass    .40    .35   .15    .10    .00	   .00
+a.warm.grass    .15    .40   .10    .05	   .00	   .00
 p.cool.grass    .20    .35   .25    .15	   .05     .00
-p.warm.grass 	.20    .50   .20    .10	   .00	   .00
-shrub			.15    .30	 .35	.20	   .00	   .00
+p.warm.grass 	.25    .25   .25    .20	   .05	   .00
+shrub			.15    .20	 .20	.35	   .10	   .00
