--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
@@ -104,7 +104,7 @@
  chen       3    1  0.94700 0.900    2       2    0.01500    5   0.035   4.429      n       0       1  0.0000     1
  acmi       4    0  0.42600 0.900    2       3    0.15000    6   0.035   5.000      y       3       2  0.0100     0
  phho       4   10  0.42600 0.900    2       3    0.15000    6   0.035   5.000      n       3       2  0.0100     1
- arfr       5   10  0.42600 0.900    2       3    0.15000    2   0.035   7.480      y       3       2  0.0100     1
+ arfr       5    0  0.42600 0.900    2       3    0.15000    2   0.035   7.480      y       3       2  0.0100     1
  lipu       5   12  0.42600 0.900    2       3    0.15000    4   0.035   7.480      n       0       2  0.0100     0
  brar       6    1  0.94700 0.900    2       3    0.01500    10  0.020   5.000	    n       0       2  0.0000     1
  vuoc       6    1  0.94700 0.900    2       1    0.01500    16  0.020   5.000      n       0       2  0.0000     0
@@ -113,8 +113,8 @@
  pose       8    0  0.47400 0.900    2       3    0.1500     2   0.500   15.096     y       3       2  0.0100     1
  koma       8    0  0.47400 0.900    2       3    0.1500     2   0.500   15.096     y       3       2  0.0100     0
  bogr       9    0  0.47400 0.900    2       2    0.12500    2   0.605   15.096     y       3       1  0.0100     1
- spcr       9    0  0.47400 0.900    2       3    0.12500    3   0.605    6.000     n       0       1  0.0100     0
- gusa       10   0  0.20000 0.900    2       3    0.1500     2   0.986   12.126     n       0       2  0.0100     0
+ spcr       9    0  0.47400 0.900    2       3    0.12500    3   0.605    6.000     y       0       1  0.0100     0
+ gusa       10  35  0.20000 0.900    2       3    0.1500     2   0.986   12.126     n       0       2  0.0100     0
  chvi       10  35  0.20000 0.900    2 	     2 	  0.1500     2   0.986   70.726     n       0       2  0.0100     1
 
 
