--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
@@ -108,15 +108,15 @@
  lipu       5   35  0.42600 0.900    2       3    0.15000    4   0.035   7.480      n       0       2  0.0100     0
  brar       6    1  0.94700 0.900    2       3    0.01500    10  0.020   5.000	    n       0       2  0.0000     1
  vuoc       6    1  0.94700 0.900    2       1    0.01500    16  0.020   5.000      n       0       2  0.0000     0
- spp1       7    1  0.94700 0.900    2       3    0.01500    2   0.020   0.429      n       0       2  0.0000     0
- spp2       7    1  0.94700 0.900    2       3    0.01500    2   0.020   2.126      n       0       2  0.0000     0
- pose       8    0  0.47400 0.900    2       3    0.1500     2   0.500   15.096     y       3       2  0.0100     1
- koma       8    0  0.47400 0.900    2       3    0.1500     2   0.500   15.096     y       3       2  0.0100     0
- bogr       9    0  0.47400 0.900    2       2    0.12500    2   0.605   15.096     y       3       1  0.0100     1
- spcr       9    0  0.47400 0.900    2       3    0.12500    3   0.605    6.000     y       0       1  0.0100     0
- gusa       10  35  0.20000 0.900    2       3    0.1500     2   0.986   12.126     n       0       2  0.0100     0
- chvi       10  35  0.20000 0.900    2 	     2 	  0.1500     2   0.986   70.726     n       0       2  0.0100     1
-
+ pose       7    0  0.47400 0.900    2       3    0.1500     2   0.500   15.096     y       3       2  0.0100     1
+ koma       7    0  0.47400 0.900    2       3    0.1500     2   0.500   15.096     y       3       2  0.0100     0
+ bogr       8    0  0.47400 0.900    2       2    0.12500    2   0.605   15.096     y       3       1  0.0100     1
+ spcr       8    0  0.47400 0.900    2       3    0.12500    3   0.605    6.000     y       0       1  0.0100     0
+ gusa       9  35  0.20000 0.900    2       3    0.1500     2   0.986   12.126     n       0       2  0.0100     0
+ chvi       9  35  0.20000 0.900    2 	     2 	  0.1500     2   0.986   70.726     n       0       2  0.0100     1
+ oppo       10   0  0.28900 1.000    2       4    0.05000    1   2.250  15.000      y       3       1  0.0100     1	
+#spp1       7    1  0.94700 0.900    2       3    0.01500    2   0.020   0.429      n       0       2  0.0000     0
+#spp2       7    1  0.94700 0.900    2       3    0.01500    2   0.020   2.126      n       0       2  0.0000     0
 
 [end]  # this marks the end of the species-specific parameters above
 
@@ -134,8 +134,8 @@
  trdu        10    1.00
  amre        10    1.00
  chen        10    1.00
- spp1        10    1.00
- spp2        10    1.00
+ #spp1        10    1.00
+ #spp2        10    1.00
 
 [end]  # end of additional annuals-only parameters.
 
@@ -164,15 +164,16 @@
  lipu     0.7500 0.9000 0.9000 0.9000
  brar     0.7500 0.9000 0.9000 0.9000
  vuoc     0.7500 0.9000 0.9000 0.9000
- spp1     0.7500 0.9000 0.9000 0.9000
- spp2     0.7500 0.9000 0.9000 0.9000
  pose     0.7500 0.9000 0.9000 0.9000
  koma     0.7500 0.9000 0.9000 0.9000
  bogr     0.7500 0.9000 0.9000 0.9000
  spcr     0.7500 0.9000 0.9000 0.9000
  gusa     0.7500 0.9000 0.9000 0.9000
  chvi     0.7500 0.9000 0.9000 0.9000
+ oppo     0.7500 0.9000 0.9000 0.9000
 
+ #spp1     0.7500 0.9000 0.9000 0.9000
+ #spp2     0.7500 0.9000 0.9000 0.9000
 [end]  # this marks the end of the veg-prop parameters
 
 # ===============================================================================
@@ -202,14 +203,16 @@
  lipu 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  brar 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  vuoc 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- spp1 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- spp2 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  pose 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  koma 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  bogr 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  spcr 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  gusa 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  chvi 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ oppo 	1		0.5	105	520	0.01	0.55	30.0	100.0
+
+#spp1 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+#spp2 	1		0.5	105	520	0.01	0.55	30.0	100.0 
 
 [end]	# this marks the end of the seed-dispersal parameters
 
