--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/sxw/sxwprod_v2.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/sxw/sxwprod_v2.in
@@ -46,10 +46,11 @@ a.warm.forb    .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
 p.cool.forb    .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56   
 p.warm.forb    .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
 a.cool.grass   .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
-a.warm.grass   .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
 p.cool.grass   .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
 p.warm.grass   .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
 shrub          .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
+succulents     .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
+#a.warm.grass   .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
 
 [end]  # section end
 
@@ -70,10 +71,10 @@ a.warm.forb    .00  .00  .05  .20  .40  .60  .60  .40  .20  .05  .00   .00
 p.cool.forb    .00  .05  .10  .20  .40  .60  .20  .10  .05  .00  .00   .00   
 p.warm.forb    .00  .00  .05  .20  .40  .60  .60  .60  .40  .20  .05   .00
 a.cool.grass   .05  .10  .10  .40  .60  .40  .00  .00  .00  .05  .05   .05
-a.warm.grass   .00  .00  .10  .20  .40  .60  .40  .20  .10  .05  .00   .00
 p.cool.grass   .00  .05  .10  .20  .40  .60  .20  .10  .05  .00  .00   .00
 p.warm.grass   .00  .00  .10  .20  .40  .60  .60  .60  .40  .20  .05   .00
 shrub          .00  .08  .20  .33  .57  .55  .50  .46  .32  .15  .08   .00
-
+succulents     .00  .00  .10  .20  .40  .60  .40  .60  .40  .20  .10   .00
+#a.warm.grass   .00  .00  .10  .20  .40  .60  .40  .20  .10  .05  .00   .00
 [end]  # section end
 
