--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/sxw/sxwroots2.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/sxw/sxwroots2.in
@@ -5,7 +5,8 @@ a.warm.forb		.40    .25	 .25	.10	   .00	   .00
 p.cool.forb		.15    .20	 .40	.20	   .05	   .00
 p.warm.forb		.15    .20	 .35	.25	   .05	   .00
 a.cool.grass    .40    .35   .15    .10    .00	   .00
-a.warm.grass    .15    .40   .10    .05	   .00	   .00
 p.cool.grass    .20    .35   .25    .15	   .05     .00
 p.warm.grass 	.25    .25   .25    .20	   .05	   .00
 shrub			.15    .20	 .20	.35	   .10	   .00
+succulents       1      0     0      0      0		 0
+#a.warm.grass    .15    .40   .10    .05	   .00	   .00
