Updated parameters for run

--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/sxw/sxwprod_v2.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/sxw/sxwprod_v2.in
@@ -40,16 +40,16 @@
 #The above value would be converted to above ground biomass by sxwprod.in Biomass column
 
 # Group        Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep   Oct  Nov  Dec
-sagebrush      .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
-a.cool.forb    .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
-a.warm.forb    .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
-p.cool.forb    .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56   
-p.warm.forb    .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
-a.cool.grass   .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
-p.cool.grass   .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
-p.warm.grass   .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
-shrub          .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
-succulents     .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
+sagebrush      .38  .38  .38  .50  .72  .84  .94  1.0  .84  .72  .52   .46
+a.cool.forb    .00  .20  .50  .80  1.0  .80  .20  .20  .10  .00  .00   .00
+a.warm.forb    .00  .00  .20  .50  .72  .80  1.0  .90  .40  .20  .00   .00
+p.cool.forb    .00  .20  .50  .80  1.0  .60  .30  .20  .20  .10  .00   .00
+p.warm.forb    .00  .00  .10  .30  .50  .70  .90  1.0  .70  .30  .20   .00
+a.cool.grass   .20  .40  .60  .80  1.0  .50  .10  .10  .10  .20  .20   .20
+p.cool.grass   .20  .40  .60  .80  1.0  .80  .60  .40  .20  .20  .20   .20
+p.warm.grass   .20  .20  .20  .30  .50  .70  .90  1.0  .80  .40  .30   .20
+shrub	       .38  .38  .38  .50  .72  .84  .94  1.0  .84  .72  .52   .46
+succulents     .38  .38  .38  .50  .72  .84  .94  1.0  .84  .72  .52   .46
 #a.warm.grass   .38  .38  .38  .50  .72  .84  .94  1.0  .45  .48  .52   .56
 
 [end]  # section end
