update species name
BRAR now equals BRTE (bromus tectorum)
POSE now equals PSSP (Pseudoroegnaria spicata)

--- a/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
+++ b/testing.sagebrush.MT_drs/Stepwat_Inputs/Input/species.in
@@ -129,7 +129,7 @@
 #
 # name     viable xdecay 
  vuoc        10    1.00
- brar        10    1.00
+ brte        10    1.00
  cryp        10    1.00
  trdu        10    1.00
  amre        10    1.00
@@ -162,9 +162,9 @@
  phho     0.7500 0.9000 0.9000 0.9000
  arfr     0.7500 0.9000 0.9000 0.9000
  lipu     0.7500 0.9000 0.9000 0.9000
- brar     0.7500 0.9000 0.9000 0.9000
+ brte     0.7500 0.9000 0.9000 0.9000
  vuoc     0.7500 0.9000 0.9000 0.9000
- pose     0.7500 0.9000 0.9000 0.9000
+ pssp     0.7500 0.9000 0.9000 0.9000
  koma     0.7500 0.9000 0.9000 0.9000
  bogr     0.7500 0.9000 0.9000 0.9000
  spcr     0.7500 0.9000 0.9000 0.9000
@@ -201,9 +201,9 @@
  phho 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  arfr 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  lipu 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- brar 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ brte 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  vuoc 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- pose 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ pssp 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  koma 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  bogr 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  spcr 	1		0.5	105	520	0.01	0.55	30.0	100.0 
